# aoc25

./: CMakeLists.txt
day1/: CMakeLists.txt  main.cpp
day2/: CMakeLists.txt  main.cpp
day3/: CMakeLists.txt  main.cpp
day4/: CMakeLists.txt  main.cpp
day5/: CMakeLists.txt  main.cpp
day6/: CMakeLists.txt  main.cpp
day7/: CMakeLists.txt  main.cpp
